[package]
name = "transpors"
version = "0.1.2"
authors = ["n1 <hrdina.pavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trs"
path = "src/main.rs"

[dependencies]
dirs = "3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
reqwest = "0.10"
gtfs-structures = "0.30"
rayon = "1.5"
chrono = {version = "^0.4.2", features = ["serde"] }
itertools = "0.8"
spinners = "1.2.0"
clap = {version = "2.33", feature = ["color"]}
