[package]
name = "trs"
version = "0.1.4"
authors = ["n1 <hrdina.pavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trs"
path = "src/main.rs"

[dependencies]
dirs = "4"
tokio = { version = "1.2", features = ["full"] }
async-trait = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
reqwest = "0.11"
gtfs-structures = "0.32"
rayon = "1.5"
chrono = {version = "^0.4.2", features = ["serde"] }
itertools = "0.10"
spinners = "4.1.0"
clap = {version = "3.2", feature = ["color"]}
